--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.darkarmy.ykl.samaritan">
 
+    <uses-permission android:name="android.permission.NFC" />
+
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:debuggable="true"
         android:theme="@style/AppTheme">
         <activity android:name=".CommandEntryActivity">
             <intent-filter>
@@ -17,7 +23,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".MovieActivity" />
-        <activity android:name=".Recommendation"></activity>
+        <activity android:name=".Recommendation" />
+        <activity android:name=".NFCReader">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.nfc.action.NDEF_DISCOVERED"
+                android:resource="nfc_tech_filter" />
+        </activity>
     </application>
 
 </manifest>
