--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,14 @@ android {
     }
 }
 
+apply plugin: 'realm-android'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
 }
